Updated the previous version, with things that actually work :o

--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -20,6 +20,11 @@ page-register {
             display: table;
             margin: 0 auto;
           }
+
+          #vinkjeDiv{
+            display: table;
+            margin: 0 auto;
+          }
     
     }
     
